#1 - Changed JDK16 for JDK11 to allow compatibility